src/test/ui/bad/bad-method-typaram-kind.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/bad-method-typaram-kind.rs:2:7
   |
LL |     1.bar::<T>();
   |       ^^^ `T` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `T`
   = help: consider adding a `where T: std::marker::Send` bound

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
